# package_creation_tutorial

./: .buildinfo  .coverage  .pre-commit-config.yaml  main.py  py-modindex.html  pyproject.toml
.github/workflows/: sphinx_doc.yaml  tests.yaml
_sources/: modules.rst.txt
docs/source/: conf.py  index.rst
src/package_creation_tutorial/: String_ops.py
tests/: test_string_ops.py
