[project]
name = "package-creation-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "yassineba13",email = "yassine.babdallah0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "ruff (>=0.9.2,<0.10.0)",
    "pre-commit (>=4.0.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "package_creation_tutorial", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
